2007-11-24  Patrick Spendrin, Christian Ehrlicher
    * include/openbabel/atomclass.h: adding support for sstream
    
    * src/config.h.cmake: cleanup
    
    * src/dlhandler_win32.cpp: improvements for msvc
    
    * */CMakeLists.txt: improving CMake based buildsystem esp. for win32
    and mingw32 - it builds now again, though there will come more improvements
    next
    
    
2007-11-18  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefields/forcefieldmmff94.*, data/mmffsymb.par: Atom typing 
	works!!
	
	* src/forcefield.cpp, include/openbabel/forcefield.h,
	tools/obminimize.cpp: Added DetectExplosion() to aid in debugging the
	problem with planar molecules.

	* src/typer.cpp, data/ringtyp.txt, include/openbabel/mol.h: Fixed some
	bugs and added more ringtypes.

	* src/ring.cpp, include/openbabel/ring.h: Added GetRootAtom(), returns
	the index of the root atom (e.g. O in furan, ...)

2007-11-20  Chris Morley

	* src/formats/xml/cmlformat.cpp: Now Has own WriteChemObject
	so OBReaction object can bypass OBMoleculeFormat functionality
	and be passed directly to WriteMolecule.
	WriteMolecule passes OBReaction objects to CMLReactFormat.
	Restore handling of WriteAromaticBonds which somehow got deleted. 
	
	* src/formats/xml/cmlreactformat.cpp: Changes to handling of
	options MolsNotStandalone and ReactionsNotStandalone.
	
	* src/formats/xml/xml.cpp(GetDerived): transfer IsLast flag to
	extended object when writing.
	
	* src/formats/thermoformat.cpp: Replace changes made for cmake
	by _MSC_VER as macro indicating Visual C++ compiler
	
	Update Windows VS OBF build files.

2007-11-19  Chris Morley

	* src/formats/xml/cmlformat.cpp: extra string temp variable so
	that it will compile on gcc
	
	* src/formats/xml/cmlreactformat.cpp: minor changesfrom compiler
	warnings
	
2007-11-18  Chris Morley

	* include/openbabel/alias.h: New File with OBGenericData derived
	class to hold aliases of placeholder atoms.
	